package com.example.ex0251.targil2;

public interface Flyable {
    public void fly();
}
