package com.example.ex0251.targil2;

public interface Runnable {
    public void run();
}
